gateway: 5-21 服务管理 - 添加HTTP服务接口开发 - 数据入库
