# course/gateway/go_gateway_demo/docs/swagger.yaml
@@ -22,6 +22,78 @@ definitions:
     required:
     - password
     type: object
+  dto.ServiceAddHTTPInput:
+    properties:
+      black_list:
+        description: 黑名单ip
+        type: string
+      clientip_flow_limit:
+        description: ^H客户端ip限流
+        type: integer
+      header_transfor:
+        description: header转换
+        type: string
+      ip_list:
+        description: ip列表
+        type: string
+      need_https:
+        description: 支持https
+        type: integer
+      need_strip_uri:
+        description: 启用strip_uri
+        type: integer
+      need_websocket:
+        description: 是否支持websocket
+        type: integer
+      open_auth:
+        description: 关键词
+        type: integer
+      round_type:
+        description: 轮询方式
+        type: integer
+      rule:
+        description: 域名或者前缀
+        type: string
+      rule_type:
+        description: 接入类型
+        type: integer
+      service_desc:
+        description: 服务描述
+        type: string
+      service_flow_limit:
+        description: 服务端限流
+        type: integer
+      service_name:
+        description: 服务名
+        type: string
+      upstream_connect_timeout:
+        description: 建立连接超时, 单位s
+        type: integer
+      upstream_header_timeout:
+        description: 获取header超时, 单位s
+        type: integer
+      upstream_idle_timeout:
+        description: 链接最大空闲时间, 单位s
+        type: integer
+      upstream_max_idle:
+        description: 最大空闲链接数
+        type: integer
+      url_rewrite:
+        description: url重写功能
+        type: string
+      weight_list:
+        description: ^H权重列表
+        type: string
+      white_list:
+        description: 白名单ip
+        type: string
+    required:
+    - ip_list
+    - rule
+    - service_desc
+    - service_name
+    - weight_list
+    type: object
   middleware.Response:
     properties:
       data:
@@ -117,6 +189,29 @@ paths:
       summary: 管理员退出
       tags:
       - 管理员接口
+  /service/service_add_http:
+    post:
+      consumes:
+      - application/json
+      description: 添加HTTP服务
+      operationId: /service/service_add_http
+      parameters:
+      - description: body
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/dto.ServiceAddHTTPInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: success
+          schema:
+            $ref: '#/definitions/middleware.Response'
+      summary: 添加HTTP服务
+      tags:
+      - 服务管理
   /service/service_delete:
     get:
       consumes:
